<resources>
    <string name="app_name">Horvia</string>
    <string name="home">accueil</string>
    <string name="profile">profil</string>
    <string name="search">recherche</string>
    <string name="cart">Panier</string>
    <string name="to_login">Se connecter</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="email">Email</string>
    <string name="password">Mot de passe</string>
    <string name="password_forgot">Mot de passe oublié ?</string>
    <string name="to_register">S\'inscrire</string>
    <string name="login">Connexion</string>
    <string name="your_login_informations">Vos informations de connexion</string>
    <string name="your_personnal_informations">Vos informations personnelles</string>
    <string name="confirm_password">Confirmez votre mot de passe</string>
    <string name="civility">Civilité</string>
    <string name="firstname">Prénom</string>
    <string name="lastname">Nom</string>
    <string name="phone_number">Numéro de téléphone</string>
    <string name="birth_date">Date de naissance</string>
    <string name="mister">Monsieur</string>
    <string name="madam">Madame</string>
    <string name="required_field">Ce champ est requis</string>
    <string name="invalid_email">Email invalide</string>
    <string name="invalid_phone_number">Numéro de téléphone invalide</string>
    <string name="password_should_be_same">Les mots de passe saisis ne correspondent pas</string>
    <string name="invalid_date">Date invalide</string>
    <string name="error_occured">Une erreur est apparue</string>
    <string name="wrong_credentials">L\'identifiant ou le mot de passe fournit n\'est pas valide</string>
    <string name="retry_later">Rééssayez plus tard</string>
    <string name="search_farm">Recherche une ferme</string>
    <string name="see_more">Voir plus</string>
    <string name="no_farm_found">Aucune ferme trouvée</string>
    <string name="personnal_informations">Informations personnelles</string>
    <string name="address">Adresse</string>
    <string name="last_order">Dernières commandes</string>
    <string name="logout">Deconnexion</string>
    <string name="year">ans</string>
    <string name="save">Sauvegarder</string>
    <string name="edit">Modifier</string>
    <string name="current_password">Mot de passe actuel</string>
    <string name="new_password">Nouveau mot de passe</string>
    <string name="confirm">Confirmer</string>
    <string name="your_password_has_been_modified">Votre mot de passe a été modifié</string>
    <string name="modify_my_password">Modifier mon mot de passe</string>
    <string name="informations_updated">Informations mises à jour</string>
    <string name="city">Ville</string>
    <string name="zip_code">Code postal</string>
    <string name="further_details">Informations supplémentaires</string>
    <string name="street_number_street_name">N° de rue, Nom de rue</string>
    <string name="zip_code_must_be_5">Un code postal doit contenir 5 chiffres</string>
    <string name="address_modified">Addresse modifiée</string>
    <string name="ongoing">En cours</string>
    <string name="completed">Complétée</string>
    <string name="add">Ajouter</string>
    <string name="price_number">Prix à l\'unité</string>
    <string name="price_weight">Prix au kg</string>
    <string name="price_litre">Prix au litre</string>
    <string name="cancel">Annuler</string>
    <string name="product_add_to_cart">Produit ajouté au panier</string>
    <string name="farm">Ferme</string>
    <string name="products">Produits</string>
    <string name="validate_cart">Valider le panier</string>
    <string name="product_deleted">Produit supprimé</string>
    <string name="your_order_has_been_send">Votre commande a été envoyée</string>
    <string name="cart_empty">Votre panier est vide</string>

</resources>