<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".ui.cart.CartFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:paddingLeft="10dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:background="@drawable/border_grey">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/cart"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="28sp"
            android:paddingHorizontal="15dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:visibility="gone"
        android:id="@+id/order_details" >

        <Button
            android:id="@+id/validate_cart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/secondary"
            android:paddingHorizontal="30dp"
            android:layout_margin="15dp"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:textSize="18sp"
            android:text="@string/validate_cart" />
    </LinearLayout>



    <TextView
        android:id="@+id/cart_empty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="40dp"
        android:textSize="20sp"
        android:visibility="gone"
        android:text="@string/cart_empty" />

</LinearLayout>