<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@color/primary"
    tools:context=".ui.search.SearchFragment">


    <LinearLayout
        android:id="@+id/search_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_bg_white"
        android:layout_marginTop="25dp"
        android:layout_marginHorizontal="25dp"
        android:orientation="horizontal"
        android:paddingVertical="8dp"
        android:paddingHorizontal="15dp">

        <EditText
            android:id="@+id/search_query"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/white"
            android:hint="@string/search_farm" />

        <ImageButton
            android:id="@+id/search_button"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@color/white"
            android:src="@drawable/search"
            android:layout_marginHorizontal="8dp"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_marginTop="35dp"
        android:padding="25dp"
        android:background="@drawable/home_farm_list">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/farm_list">

        </LinearLayout>

        <Button
            android:id="@+id/search_see_more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/secondary"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:text="@string/see_more"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/no_farm_found"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="20sp"
            android:text="@string/no_farm_found"
            android:visibility="gone"/>

    </LinearLayout>




</LinearLayout>