<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.ModifyPasswordFragment"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center_horizontal"
    android:paddingHorizontal="25dp"
    android:paddingVertical="40dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/modify_my_password"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="30sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/current_password"
                android:textColor="@color/secondary"
                android:textSize="18sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_edittext"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@drawable/icon_edittext"
                    android:padding="8dp"
                    android:src="@drawable/user"
                    app:tint="@color/white" />

                <EditText
                    android:id="@+id/current_password"
                    android:layout_width="match_parent"
                    android:layout_height="46dp"
                    android:padding="5dp"
                    android:background="@color/transparent"
                    android:inputType="textPassword" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/new_password"
                android:textColor="@color/secondary"
                android:textSize="18sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_edittext"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@drawable/icon_edittext"
                    android:padding="8dp"
                    android:src="@drawable/user"
                    app:tint="@color/white" />

                <EditText
                    android:id="@+id/new_password"
                    android:layout_width="match_parent"
                    android:layout_height="46dp"
                    android:padding="5dp"
                    android:background="@color/transparent"
                    android:inputType="textPassword" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/confirm_password"
                android:textColor="@color/secondary"
                android:textSize="18sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_edittext"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@drawable/icon_edittext"
                    android:padding="8dp"
                    android:src="@drawable/user"
                    app:tint="@color/white" />

                <EditText
                    android:id="@+id/new_password_confirm"
                    android:layout_width="match_parent"
                    android:layout_height="46dp"
                    android:padding="5dp"
                    android:background="@color/transparent"
                    android:inputType="textEmailAddress" />

            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/submit_modify_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/confirm"
            android:backgroundTint="@color/secondary"
            android:textStyle="bold"
            android:textAllCaps="false" />


</LinearLayout>