<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".ui.profile.AddressFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:background="@drawable/border_grey">

        <ImageView
            android:id="@+id/back"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:padding="10dp"
            android:background="@drawable/border_grey"
            android:src="@drawable/chevron" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/address"
            android:textStyle="bold"
            android:textSize="22sp"
            android:paddingHorizontal="15dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:padding="25dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/street_number_street_name"
                android:textColor="@color/secondary"
                android:textSize="18sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_edittext"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@drawable/icon_edittext"
                    android:padding="8dp"
                    android:src="@drawable/user"
                    app:tint="@color/white" />

                <EditText
                    android:id="@+id/street"
                    android:layout_width="match_parent"
                    android:layout_height="46dp"
                    android:padding="10dp"
                    android:background="@color/transparent"
                    android:inputType="text" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/city"
                android:textColor="@color/secondary"
                android:textSize="18sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_edittext"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@drawable/icon_edittext"
                    android:padding="8dp"
                    android:src="@drawable/user"
                    app:tint="@color/white" />

                <EditText
                    android:id="@+id/city"
                    android:layout_width="match_parent"
                    android:layout_height="46dp"
                    android:padding="10dp"
                    android:background="@color/transparent"
                    android:inputType="text" />

            </LinearLayout>
        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/zip_code"
                android:textColor="@color/secondary"
                android:textSize="18sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_edittext"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@drawable/icon_edittext"
                    android:padding="8dp"
                    android:src="@drawable/user"
                    app:tint="@color/white" />

                <EditText
                    android:id="@+id/zip_code"
                    android:layout_width="match_parent"
                    android:layout_height="46dp"
                    android:padding="10dp"
                    android:background="@color/transparent"
                    android:inputType="text" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/further_details"
                android:textColor="@color/secondary"
                android:textSize="18sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_edittext"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@drawable/icon_edittext"
                    android:padding="8dp"
                    android:src="@drawable/user"
                    app:tint="@color/white" />

                <EditText
                    android:id="@+id/further_details"
                    android:layout_width="match_parent"
                    android:layout_height="46dp"
                    android:padding="10dp"
                    android:background="@color/transparent"
                    android:inputType="text" />

            </LinearLayout>
        </LinearLayout>



        <Button
            android:id="@+id/submit_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/save"
            android:backgroundTint="@color/secondary"
            android:textStyle="bold"
            android:textAllCaps="false" />


    </LinearLayout>

</LinearLayout>